# Average-Time-CNEA

./: README.md  pyproject.toml
average_time/: __main__.py  average_time.py
